[design] fixed weird overflowing in navbar

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -7,6 +7,7 @@ body {
   -o-background-size: cover;
   background-size: cover;
   box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 .navbar {
